# PandaAtlas

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CONTEXT-MAP.md  README.md  docker-compose.yml  findings.md  package-lock.json  package.json  progress.md  task_plan.md
services/api/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/api/app/: main.py
services/api/app/acquisition/: __init__.py  adapters.py  backfill.py  bundles.py  capabilities.py  lab.py  (+16 more)
services/api/openapi/: panda-atlas-v1.yaml
services/api/scripts/: apply_chengdu_collection_curation.py  apply_smithsonian_current_pair_curation_patch.py  bootstrap_local_db.py  build_acquisition_work_queue.py  build_batch_review_plan.py  build_collection_curation_batches.py  build_collection_release_candidate.py  build_public_release.py  check_acquisition_reconciliation.py  check_curator_decision_export.py  check_openapi_contract.py  check_smithsonian_current_pair_enrichment.py  check_smithsonian_panda_profiles.py  curate_acquisition_candidates.py  generate_bilingual_summary_contract.py  generate_discovery_intake_contract.py  generate_fact_enrichment_contract.py  generate_identity_extraction_contract.py  generate_identity_resolution_contract.py  generate_panda_knowledge_contract.py  import_demo_seed.py  review_smithsonian_current_pair_release_inputs.py  run_breadth_first_backfill.py  run_crawler_poc.py  run_postgres_attachment_recovery_drill.py  run_release_recovery_drill.py  run_source_adapter.py  smoke_test_admin_import.py  smoke_test_api.py  smoke_test_public_api.py  verify_real_db_chain.py
(+673 files in other folders)
